# purser

./: .env.example  CLAUDE.md  Cargo.toml  README.md  config.toml.example  products.toml.example  spec.md
deploy/: Dockerfile  docker-compose.yml  purser.service
docs/: architecture.md  deployment.md  security.md
examples/: gen_test_keys.rs
src/: catalog.rs  config.rs  error.rs  main.rs  persistence.rs  pipeline.rs  polling.rs  ratelimit.rs  state.rs  test_keys.rs
src/messages/: mod.rs  validation.rs
src/nostr/: mdk_trait.rs  mock_mdk.rs  mod.rs  real_mdk.rs
src/providers/: mod.rs  square.rs  strike.rs
tests/e2e/: common.rs  fiat_checkout.rs  graceful_shutdown.rs  lightning_checkout.rs  main.rs  shipping_update.rs
