[package]
name = "purser"
version = "0.1.0"
edition = "2024"
description = "Nostr-native payment daemon with pluggable payment providers"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# MDK dependency — pin to specific commit before implementation begins
# mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "TBD" }
