[package]
name = "purser"
version = "0.1.0"
edition = "2024"
description = "Nostr-native payment daemon with pluggable payment providers"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }

mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "adaf261ba8f9aca8e5c3049bc85ac236837af76c" }
mdk-memory-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "adaf261ba8f9aca8e5c3049bc85ac236837af76c" }
nostr-sdk = "0.44"
nostr = { version = "0.44", features = ["std", "nip59"] }
hex = "0.4"
